# rechtspraak-lido-sqlite

./: .gitignore  Makefile  README.md  build_lido_sqlite.py  inspect_lido.py  pyproject.toml  test_query.py
.github/workflows/: ci.yml  publish.yml
src/: download.py  parse.py  schema.sql
