[project]
name = "rechtspraak-self-host"
version = "0.1.0"
description = "Build a local SQLite database from the lido-export.ttl.gz linked-data export for use with rechtspraak-extractor"
requires-python = ">=3.10"
dependencies = [
    "pyoxigraph>=0.3",
    "tqdm",
    "requests",
]

# System dependency required for TTL → N-Triples conversion (the source file
# contains syntax violations that strict parsers reject):
#   macOS:  brew install serd   or   brew install raptor
#   Ubuntu: sudo apt install serd   or   sudo apt install raptor2-utils
